tests/baselines/reference/moduleNoneErrors.errors.txt
tests/cases/compiler/a.ts(1,14): error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.


==== tests/cases/compiler/a.ts (1 errors) ====
    export class Foo {
                 ~~~
!!! error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.
        foo: string;
    }
    